# secure-send

./: .gitignore  Cargo.toml  README.md
docs/: openapi.yml
src/: main.rs
src/api/: download.rs  upload.rs
